<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Assignment2</string>
    <string name="action_settings">Settings</string>
    <string name="button_LOGIN">SIGNIN</string>
    <string name="button_SIGNIN">Login</string>
    <string name="button_SIGNUP">SignUp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_message"></string>
    <string name="firstname">First name:</string>
    <string name="lastname">Last name:</string>
    <string name="password">Password:</string>
    <string name="studentID">Student ID:</string>
    <string name="enter_fn">Enter your first name</string>
    <string name="enter_ln">Enter your last name</string>
    <string name="enter_id">Enter your student number</string>
    <string name="invalid_input">Incorrect input</string>
    <string name="invalid_pw">Password must be 6 characters and must contain 1 uppercase letter and 1 number.</string>
    <string name="signin_success">Your account has been successfully created!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_dbadapter">DBAdapter</string>
    <string name="title_activity_entry">EntryActivity</string>
    <string name="error">Password Error</string>
    <string name="loginError">Password must not contain spaces or special characters.</string>
    <string name="back">Return</string>
    <string name="wrongpassword">Wrong password. Please try again.</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="gallery">Visit A Gallery</string>
    <string name="mainmenu">Main Menu</string>
    <string name="help">Need Help</string>
    <string name="rectangle">Rectangle Game</string>
    <string name="triangle">Triangle Game</string>
    <string name="title_activity_square">SquareActivity</string>
    <string name="title_activity_triangle">TriangleActivity</string>
    <string name="coursepage">https://courses.cs.sfu.ca/2017sp-cmpt-276-d1/pages/index</string>
    <string name="about">This program was written by Junho Sohn for CMPT 276, Assignment 2. Starting from the registration and login page using
        the built-in SQLite database, it also features two games: Rectangle Game and Circle Game.</string>
    <string name="about2">In the Rectangle Game, the player will be given an input of an NxN grid and blocks will be coloured diagonally from the rightmost top position down to the leftmost bottom corner.
        There will also be a restriction on the size of the grid of 15x15, as extremely large grids are not supported in this version.</string>
    <string name="about3">The Circle Game tests the player of their reflexes by having circles appear and require the player to click on them.
       The player will be able to choose the number of circles that appear through input and will have the options of difficulty as "easy", "medium", and "difficult". 
       The score can be accessed by pressing the back button, where it will show the final score before exiting the game.</string>
    <string name="course">Course Page:</string>
    <string name="title_activity_flow">FlowActivity</string>
    <string name="btnImage1">Image 1</string>
    <string name="btnImage2">Image 2</string>
    <string name="btnImage3">Image 3</string>
    <string name="btnImage4">Image 4</string>
    <string name="title_activity_rectangle_input">RectangleInputActivity</string>
    <string name="rectangleinput">Input n-value for nxn grid: </string>
    <string name="creategrid">Create Grid</string>
    <string name="title_activity_rectangle">RectangleActivity</string>
    <string name="rError">Input Error</string>
    <string name="rectangleerror">Please input n value 1 to 15.</string>
    <string name="cont">CONTINUE</string>
    <string name="exit">EXIT</string>
    <string name="emptyinput">Please input a number.</string>
    <string name="title_activity_fragment">FragmentActivity</string>
    <string name="title_activity_rectangle_fragment">RectangleFragment</string>
    <string name="click">Click any of the squares to colour them in diagonally!</string>
    <string name="title_activity_circle">CircleActivity</string>
    <string name="circlegame">Circle Game</string>
    <string name="difficulty">Difficulty:</string>
    <string name="numShapes">Number of Shapes:</string>
    <string name="start">Start</string>
    <string name="circleerror">Please input number of shapes from 1 to 10.</string>
    <string name="title_activity_circle_fragment">CircleFragment</string>
    <string name="dError">Please enter a level of difficulty: easy, medium, difficult</string>
    <string name="title_activity_circle_game">CircleGameActivity</string>
	<string name="scoremessage">FINAL SCORE</string>
    <string name="score">Clicked:</string>
	<string name="missed">Missed:</string>
    
</resources>
