<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.assignment2.SignUpActivity" >


    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="46dp"
        android:text="@string/firstname"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/about2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/about"
        android:layout_below="@+id/about"
        android:layout_marginTop="35dp"
        android:text="@string/lastname"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/login_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_marginTop="53dp"
        android:text="@string/login_message"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/about2"
        android:layout_below="@+id/about2"
        android:layout_marginTop="43dp"
        android:text="@string/studentID"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/input_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/about2"
        android:layout_alignBottom="@+id/about2"
        android:layout_alignLeft="@+id/input_firstname"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/enter_ln"
        android:textSize="12sp" >

        />

</EditText>

    <EditText
        android:id="@+id/input_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/about"
        android:layout_alignBottom="@+id/about"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/about"
        android:ems="10"
        android:hint="@string/enter_fn"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/input_studentID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/input_lastname"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/enter_id"
        android:textSize="12sp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/TextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/about"
        android:layout_below="@+id/input_studentID"
        android:layout_marginTop="38dp"
        android:text="@string/password"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView3"
        android:layout_alignBottom="@+id/TextView3"
        android:layout_toRightOf="@+id/textView4"
        android:ems="10"
        android:inputType="textPassword" />

	<Button
	    android:id="@+id/btn_register"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/input_password"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="56dp"
	    android:text="@string/button_SIGNUP"
	    android:textColor="@color/button_color" />

</RelativeLayout>
