<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.assignment2.FlowActivity" >

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:text="@string/gallery"
        android:onClick="Gallery"
        android:textColor="@color/button_color" />

    <Button
        android:id="@+id/btn_mainmenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_gallery"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:text="@string/mainmenu"
        android:onClick="MainMenu"
        android:textColor="@color/button_color" />

    <Button
        android:id="@+id/btn_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_mainmenu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:text="@string/help"
        android:onClick="Help"
        android:textColor="@color/button_color" />
    
</RelativeLayout>
