<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.assignment2.CircleActivity" >

    <EditText
        android:id="@+id/input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/shapesInput"
        android:ems="10"
        android:inputType="number" >
    </EditText>

    <TextView
        android:id="@+id/shapesInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/input"
        android:layout_alignBottom="@+id/input"
        android:layout_alignParentLeft="true"
        android:text="@string/numShapes" />
    
    <RelativeLayout
        android:id="@+id/fragmentcircle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/shapesInput"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/btnStart" >

    </RelativeLayout>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/difficulty"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/start"
        android:textColor="@color/button_color" />

    <TextView
        android:id="@+id/difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/shapesInput"
        android:layout_below="@+id/input"
        android:layout_marginTop="14dp"
        android:text="@string/difficulty" />

    <EditText
        android:id="@+id/inputDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/difficulty"
        android:layout_alignBottom="@+id/difficulty"
        android:layout_toRightOf="@+id/difficulty"
        android:ems="10" >

        <requestFocus />
    </EditText>

</RelativeLayout>